<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TeaLDD</string>
    <string name="title_home">Home</string>
    <string name="title_scan">Scan</string>
    <string name="title_settings">Settings</string>
    <string name="title_history">History</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tea_health_checker">Tea Health Checker</string>
    <string name="about_us">About Us</string>
    <string name="profile">profile</string>
    <string name="no_data"> Not Signed In</string>
    <string name="sign_p"> Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="log_out">Log Out</string>
    <string name="register">Register</string>
    <string name="login">LogIn</string>
    <string name="logo_description">Tea Health Checker Logo</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_account">Already Have an Account</string>
    <string name="password">Password\n</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="dont_have_account">Don\'t Have an Account</string>
    <string name="client_id" tools:ignore="TypographyDashes">109862838572-6u5bgk9v4o7th6nt8uecsjl3cja72jk4.apps.googleusercontent.com</string>


</resources>